--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
               </div>
             </li>-->
-            <li class="bitlink">
+            <!--<li class="bitlink">
               <div class="bitlink-title">
                 <a href="">Bulletproof Coffee: Debunking the Hot Buttered Hype</a>
               </div>
@@ -88,17 +88,17 @@
                 <a href="">gizmodo.com/bulletproof-coffee-debunking-the-hot-buttered-hype-1681321467</a>
               </div>
               <div class="bitlink-footer">
-                <div class="short-url" style="display:inline;">
-                  <a href="">bit.ly/15DKrWb</a>
+                <div class="short-url">
+                  <a href="">bit.ly/<span class="short-url-path">15DKrWb</span></a>
                 </div>
-                <div class="hit-count" style="display:inline; float:right;">
+                <div class="hit-count">
                   <a href="/">
-                    <span style="">6,744</span><img style="height:1.35em;margin-bottom:-2px;margin-left:3px;"src="assets/click-icon.svg">
+                    <span>6,744</span><img class="click-icon" src="assets/click-icon.svg">
                   </a>
                   
                 </div>
               </div>
-            </li>
+            </li>-->
             <!--<li class="bitlink">
               <div class="bitlink-title">
                 <a href="">Bulletproof Coffee: Debunking the Hot Buttered Hype</a>
