Got li transitions working

--- a/index.html
+++ b/index.html
@@ -103,59 +103,7 @@
     <div class="container">
       <div class="columns is-desktop bitlinks-container">
         <div class="column is-8 is-offset-2 bitlinks-list">
-          <ul class="bitlinks">
-            <!--<li class="bitlink">
-              <div class="bitlink-title">
-                <a href="">Bulletproof Coffee: Debunking the Hot Buttered Hype</a>
-              </div>
-              <div class="long-url">
-                <a href="">gizmodo.com/bulletproof-coffee-debunking-the-hot-buttered-hype-1681321467</a>
-              </div>
-              <div class="bitlink-footer">
-                <div class="short-url" style="display:inline;">
-                  <a href="">bit.ly/<strong style="color:#ee6123;">15DKrWb</strong></a>
-                </div>
-                <div class="hit-count" style="display:inline; float:right;">
-                  <a href="">6,744</a>
-                </div>
-              </div>
-            </li>-->
-            <!--<li class="bitlink">
-              <div class="bitlink-title">
-                <a href="">Bulletproof Coffee: Debunking the Hot Buttered Hype</a>
-              </div>
-              <div class="long-url">
-                <a href="">gizmodo.com/bulletproof-coffee-debunking-the-hot-buttered-hype-1681321467</a>
-              </div>
-              <div class="bitlink-footer">
-                <div class="short-url">
-                  <a href="">bit.ly/<span class="short-url-path">15DKrWb</span></a>
-                </div>
-                <div class="hit-count">
-                  <a href="/">
-                    <span>6,744</span><img class="click-icon" src="assets/click-icon.svg">
-                  </a>
-                  
-                </div>
-              </div>
-            </li>-->
-            <!--<li class="bitlink">
-              <div class="bitlink-title">
-                <a href="">Bulletproof Coffee: Debunking the Hot Buttered Hype</a>
-              </div>
-              <div class="long-url">
-                <a href="">gizmodo.com/bulletproof-coffee-debunking-the-hot-buttered-hype-1681321467</a>
-              </div>
-              <div class="bitlink-footer">
-                <div class="short-url" style="display:inline;">
-                  <a href="">bit.ly/15DKrWb</a>
-                </div>
-                <div class="hit-count" style="display:inline; float:right;">
-                  <a href="">6,744</a>
-                </div>
-              </div>
-            </li>-->
-          </ul>
+          <ul class="bitlinks"></ul>
         </div>
       </div>
     </div>
