Fixed bitly logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="navbar-left">
             <div class="navbar-item navbar-logo">
               <a>
-                <img src="assets/oldlogo.svg">
+                <img src="assets/logo.svg">
               </a>
             </div>
             <div class="navbar-item nav-links">
