--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
           <div class="navbar-left">
             <div class="navbar-item navbar-logo">
-              <a>
+              <a href=''>
                 <img src="assets/logo.svg">
               </a>
             </div>
